Fix double scrollbars on highlights

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -10,6 +10,10 @@
   overflow: scroll;
 }
 
+div.highlight {
+  overflow: hidden;
+}
+
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
 }
